--- a/mywork.html
+++ b/mywork.html
@@ -249,7 +249,7 @@
       <p class="text-gray-700 dark:text-gray-300 mb-6">
         Let's capture your special moments together. Book your session today!
       </p>
-      <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-lg font-medium shadow transition-all duration-300 transform hover:scale-105">
+      <a href="./index.html#bookingForm" class="inline-block bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-lg font-medium shadow transition-all duration-300 transform hover:scale-105">
         Book Your Session
       </a>
     </div>
