Correct phot category

--- a/mywork.html
+++ b/mywork.html
@@ -197,7 +197,7 @@
       <button onclick="filterGallery('portraits')" class="filter-btn bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 px-6 py-2 rounded-lg font-medium transition-all duration-300 hover:scale-105">
         Portraits
       </button>
-      <button onclick="filterGallery('weddings')" class="filter-btn bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 px-6 py-2 rounded-lg font-medium transition-all duration-300 hover:scale-105">
+      <button onclick="filterGallery('sports')" class="filter-btn bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 px-6 py-2 rounded-lg font-medium transition-all duration-300 hover:scale-105">
         Sports
       </button>
       <button onclick="filterGallery('events')" class="filter-btn bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 px-6 py-2 rounded-lg font-medium transition-all duration-300 hover:scale-105">
@@ -215,7 +215,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 max-w-5xl justify-items-center">
         
         <!-- Portrait Images -->
-        <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="portraits">
+        <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="sports">
           <div class="aspect-square bg-gradient-to-br from-blue-200 to-purple-200 dark:from-blue-800 dark:to-purple-800 flex items-center justify-center text-6xl" onclick="openLightbox(this.querySelector('div').style.backgroundImage, 'Professional Portrait Session', 'portraits', 0)">
             <img src="./images/IMG_0843.JPG" alt="SJC Rugby" class="w-full h-full object-cover" />
           </div>
@@ -225,7 +225,7 @@
           </div>
         </div>
   
-        <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="portraits">
+        <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="sports">
           <div class="aspect-square bg-gradient-to-br from-blue-200 to-purple-200 dark:from-blue-800 dark:to-purple-800 flex items-center justify-center text-6xl" onclick="openLightbox(this.querySelector('div').style.backgroundImage, 'Professional Portrait Session', 'portraits', 0)">
             <img src="./images/IMG_9999.JPG" alt="Basketball action shot" class="w-full h-full object-cover" />
           </div>
