Add 2 new photos

--- a/mywork.html
+++ b/mywork.html
@@ -234,6 +234,24 @@
             <p class="text-sm text-gray-600 dark:text-gray-400">A photograph of a game changing moment.</p>
           </div>
         </div>
+        <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="sports">
+            <div class="aspect-square bg-gradient-to-br from-blue-200 to-purple-200 dark:from-blue-800 dark:to-purple-800 flex items-center justify-center text-6xl" onclick="openLightbox(this.querySelector('div').style.backgroundImage, 'Professional Portrait Session', 'portraits', 0)">
+              <img src="./images/IMG_0731.JPG" alt="Basketball action shot" class="w-full h-full object-cover" />
+            </div>
+            <div class="p-4">
+              <h3 class="font-semibold text-gray-800 dark:text-gray-200">St John's Spirit</h3>
+              <p class="text-sm text-gray-600 dark:text-gray-400">A photograph of an awesome trio.</p>
+            </div>
+          </div>
+          <div class="gallery-item bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 cursor-pointer" data-category="sports">
+            <div class="aspect-square bg-gradient-to-br from-blue-200 to-purple-200 dark:from-blue-800 dark:to-purple-800 flex items-center justify-center text-6xl" onclick="openLightbox(this.querySelector('div').style.backgroundImage, 'Professional Portrait Session', 'portraits', 0)">
+              <img src="./images/IMG_3675.JPG" alt="Basketball action shot" class="w-full h-full object-cover" />
+            </div>
+            <div class="p-4">
+              <h3 class="font-semibold text-gray-800 dark:text-gray-200">Michealhouse 2025 16A</h3>
+              <p class="text-sm text-gray-600 dark:text-gray-400">A photograph of the Michealhouse under 16A basketball team at St John's basketball tournament</p>
+            </div>
+          </div>
   
       </div>
     </div>
