Changed alts for imgs

--- a/mywork.html
+++ b/mywork.html
@@ -376,7 +376,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_0227.jpg" 
-              alt="Michealhouse 2025 16A" 
+              alt="Vocal Performance" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -390,7 +390,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_7143.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Hockey Player" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -403,7 +403,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_2067.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Eagles Basketball Free Throw" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -416,7 +416,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_2538.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Rugby Shot" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -429,7 +429,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_3929.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="St John's Basketball Tense Moment" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -442,7 +442,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_3946.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Nasty C Performs At St John's" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -455,7 +455,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_3949.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Nasty C Performs At St John's" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -468,7 +468,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_3954.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Nasty C Performs At St John's" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -481,7 +481,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_4038.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Awards Given At St John's Basketball Tournament" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
@@ -494,7 +494,7 @@ window.addEventListener('load', () => {
           <div class="aspect-[4/5] bg-gray-100 dark:bg-gray-800 rounded-xl overflow-hidden mb-4">
             <img 
               src="./images/IMG_7128.JPG" 
-              alt="Michealhouse 2025 16A" 
+              alt="Hockey Shot" 
               class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700"
             />
           </div>
