Slight change made to about

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ window.addEventListener('load', () => {
         </p>
         <div class="w-16 h-px bg-gray-900 dark:bg-gray-100 mx-auto mb-12"></div>
         <p class="text-lg text-gray-700 dark:text-gray-300 max-w-2xl mx-auto leading-relaxed">
-          Capturing moments that tell stories. Professional photographer specializing in sports, portraits, and lifestyle photography with over 2 years of experience. I would love to do your photos and videos for your MD!!
+          Capturing moments that tell stories. Professional photographer specializing in sports, portraits, and lifestyle photography with over 2 years of experience. I would love to do your photos and videos for your MD or any other occasion!!
         </p>
       </div>
     </div>
